--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,7 +33,7 @@ services:
       ]
     volumes:
       - ./database/data:/var/lib/mysql
-      - ./backend/db/initdb.d:/docker-entrypoint-intitdb.d
+      - ./backend/db/init.d:/docker-entrypoint-intitdb.d
     networks:
       - mysite_network
     restart: always
