--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,16 @@ fastapi
 uvicorn[standard]
 jinja2
 requests
-pydantic[email]
-python-dotenv
 sqlalchemy
+pydantic
+pydantic[email]
 pymysql
-apscheduler
 langchain
-langchain_openai
-langchain_community
+langchain-community
+langchain-openai
+openai
 pypdf
+tiktoken
 chromadb
+gunicorn
+apscheduler
